Remove CTA buttons from hero and CTA sections

--- a/index.html
+++ b/index.html
@@ -158,10 +158,6 @@
                         <span>24/7 Support</span>
                     </div>
                 </div>
-                <div class="hero-cta">
-                    <a href="#contact" class="btn-primary btn-large">Start Free Trial</a>
-                    <a href="#demo" class="btn-secondary btn-large">Watch Demo</a>
-                </div>
             </div>
             <div class="hero-image">
                 <img src="images/dashboard1.png" alt="TaxGo E-Invoice Dashboard Interface">
@@ -472,11 +468,7 @@
         <div class="container">
             <div class="cta-content">
                 <h2>Ready to Simplify Your E-Invoice Compliance?</h2>
-                <p>Join hundreds of Malaysian businesses already using TaxGo. Start your free trial today.</p>
-                <div class="cta-buttons">
-                    <a href="#contact" class="btn-primary btn-large">Start Free Trial</a>
-                    <a href="#contact" class="btn-secondary btn-large">Schedule Demo</a>
-                </div>
+                <p>Join hundreds of Malaysian businesses already using TaxGo. Get in touch with us today.</p>
             </div>
         </div>
     </section>
