Remove 14-day free trial mention from FAQ

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                         <span class="faq-icon">+</span>
                     </button>
                     <div class="faq-answer">
-                        <p>Yes! We offer a 14-day free trial with full access to all features. No credit card required. You can test all upload methods, submit invoices, and explore the platform risk-free.</p>
+                        <p>Yes! Contact us to discuss your requirements and we'll help you get started. You can test all upload methods, submit invoices, and explore the platform with our team's guidance.</p>
                     </div>
                 </div>
             </div>
