Update email address to hello@taxgo.com.my

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         },
         "contactPoint": {
           "@type": "ContactPoint",
-          "email": "hello@blueaura.com.my",
+          "email": "hello@taxgo.com.my",
           "contactType": "Sales"
         }
       },
@@ -488,7 +488,7 @@
                         <div class="contact-icon">📧</div>
                         <div>
                             <strong>Email</strong>
-                            <p><a href="mailto:hello@blueaura.com.my">hello@blueaura.com.my</a></p>
+                            <p><a href="mailto:hello@taxgo.com.my">hello@taxgo.com.my</a></p>
                         </div>
                     </div>
                     <div class="contact-item">
