--- a/index.html
+++ b/index.html
@@ -521,7 +521,13 @@
                 </div>
 
                 <div class="contact-form">
-                    <form id="contactForm">
+                    <form id="contactForm" action="https://api.web3forms.com/submit" method="POST">
+                        <!-- Web3Forms Access Key -->
+                        <input type="hidden" name="access_key" value="193c970f-7796-41d7-8f31-2f4c15e03078">
+                        <input type="hidden" name="subject" value="New TaxGo Inquiry">
+                        <input type="hidden" name="from_name" value="TaxGo Website">
+                        <input type="hidden" name="redirect" value="false">
+                        
                         <div class="form-group">
                             <label for="name">Full Name *</label>
                             <input type="text" id="name" name="name" required>
