--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                 <a href="#features" class="nav-link">Features</a>
                 <a href="#benefits" class="nav-link">Benefits</a>
                 <a href="#how-it-works" class="nav-link">How It Works</a>
+                <a href="/blog/" class="nav-link">Blog</a>
                 <a href="#faq" class="nav-link">FAQ</a>
                 <a href="#contact" class="nav-link">Contact</a>
                 <a href="#contact" class="btn-primary nav-cta">Get Started</a>
@@ -582,7 +583,7 @@
                     <h4>Product</h4>
                     <ul>
                         <li><a href="#features">Features</a></li>
-                        <li><a href="#demo">Demo</a></li>
+                        <li><a href="/blog/">Blog</a></li>
                         <li><a href="#faq">FAQ</a></li>
                     </ul>
                 </div>
@@ -603,7 +604,7 @@
                         <li><a href="/documentation">Documentation</a></li>
                         <li><a href="/api-docs">API Reference</a></li>
                         <li><a href="/support">Support Center</a></li>
-                        <li><a href="/blog">Blog</a></li>
+                        <li><a href="/blog/">Blog</a></li>
                     </ul>
                 </div>
 
